multiblock analysis results-update

--- a/multiblock/Multi-Questionnaire Analysis.html
+++ b/multiblock/Multi-Questionnaire Analysis.html
@@ -1450,7 +1450,7 @@ aside > *:last-child {
 <p><img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-07-16-19-09.png" alt=""></p>
 <p>Most of the subjects were not participated in all surveys, therefore we filtered some questionnaires with very few subjects before matrix factorization was performed.</p>
 <p>We concatenate all questionnaires based on subject ID <code>EID</code> to obtain a complete participant list in <code>HBN</code> dataset. Then we only includes questionnaires with more than 20% subjects. In particular, the list of questionnaires we considered is shown below:</p>
-<img src="file:////figure/2022-04-01-14-14-49.png" width="300">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-01-14-14-49.png" width="300">
 <h2 id="matrix-factorization-and-imputation">Matrix factorization and imputation</h2>
 <h3 id="embedding">Embedding</h3>
 <p>Using the boxed-constrained non-negative matrix factorization with spartiy control, we factorize the normalized matrix to obtain subject and question embedding.</p>
@@ -2043,24 +2043,24 @@ We also add one extra column in <eq><span class="katex"><span class="katex-mathm
 <p>Corresponding question loadings on cofounders specific to <code>CBCL</code> <eq><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mover accent="true"><mi>Q</mi><mo stretchy="true">‾</mo></mover><mi>c</mi></msub></mrow><annotation encoding="application/x-tex">\overline{Q}_c</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.12747em;vertical-align:-0.24414em;"></span><span class="mord"><span class="mord overline"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.8833300000000001em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord mathnormal">Q</span></span></span><span style="top:-3.80333em;"><span class="pstrut" style="height:3em;"></span><span class="overline-line" style="border-bottom-width:0.04em;"></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.19444em;"><span></span></span></span></span></span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.057252em;"><span style="top:-2.4558600000000004em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">c</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.24414em;"><span></span></span></span></span></span></span></span></span></span></eq>
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-08-09-41-57.png" alt=""></p>
 <p>Similarly, we could obtain the question word clouds of each specific factors:</p>
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor1 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor2 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor3 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor4 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor5 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor6 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/Factor7 (1).png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor1.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor2.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor3.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor4.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor5.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor6.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor7.png" width="150">
 <p>and the question word clouds of each universal factors:</p>
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor1 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor2 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor3 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor4 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor5 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor6 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor7 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor8 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor9 (1).png" width="150">
-<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/Factor10 (1).png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor1.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor2.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor3.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor4.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor5.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor6.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor7.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor8.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor9.png" width="150">
+<img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor10.png" width="150">
 <p>As shown in the universal factors, since it is shared with all questionnaires, the number of dimension may not be optimal for <code>CBCL</code> and we can see that there are 4 factors which shares very similar pattern (Factor <code>1</code>, <code>4</code>, <code>5</code>, <code>7</code>).</p>
 </div>
         </div>
