--- a/multiblock/Multi-Questionnaire Analysis.html
+++ b/multiblock/Multi-Questionnaire Analysis.html
@@ -1465,8 +1465,10 @@ aside > *:last-child {
 </ul>
 <h3 id="top-components-in-each-factor">Top components in each factor</h3>
 <p>By normalizing the question loadings in each questionnaire, we can also list the top 5 questionnaires in each factors (Apologize for a shift in factor indexing):</p>
+<p align="center">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-07-16-35-46.png" width="400">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-07-16-36-11.png" width="373">
+</p>
 <p>Particularly, we could also extract the top 15 questions in each factor for more detailed understanding. We expected that most factors are unique to particular questionnaire (other it does not make sense to perform multiple surveys). Interestingly, some factors captured &quot;reasonable&quot; relationship across questionnaires. (Factor 6, 8, 10?)</p>
 <pre><code><code><div>=============== Factor 1 ===============
 1: [SWAN_07]--7. Keeps track of things necessary for activities (doesn't lose them)
@@ -1816,6 +1818,7 @@ aside > *:last-child {
 <p>The loadings related to the cofounders <code>Young</code>, <code>Old</code>, <code>Male</code> and <code>Female</code></p>
 <p><img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-07-16-48-48.png" alt=""></p>
 <p>The wordcloud for each factor is shown below:</p>
+<p float="left">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor1.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor2.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor3.png" width="150">
@@ -1836,6 +1839,7 @@ aside > *:last-child {
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor18.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor19.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/simple_model-20/Factor20.png" width="150">
+</p>
 <blockquote>
 <p><strong>Remark 1</strong></p>
 <p>Since we concatenate all questionnaires into one large matrix, we implicitly assume that the subject embedding is universal across all questionnaires. In particular, the dimension of subject embedding is influenced by the complexity of all questionnaires. Using blockwise cross-validation on imputating matrix entries, we found that the intrinsic dimension of the concatenated matrix is <eq><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>k</mi><mo>=</mo><mn>20</mn></mrow><annotation encoding="application/x-tex">k=20</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.69444em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">20</span></span></span></span></eq>. However, if we only consider <code>CBCL</code> dataset, the intrinsic dimension was <eq><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>k</mi><mo>=</mo><mn>7</mn></mrow><annotation encoding="application/x-tex">k=7</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.69444em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">7</span></span></span></span></eq>, which is much smaller.</p>
@@ -2043,6 +2047,7 @@ We also add one extra column in <eq><span class="katex"><span class="katex-mathm
 <p>Corresponding question loadings on cofounders specific to <code>CBCL</code> <eq><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mover accent="true"><mi>Q</mi><mo stretchy="true">‾</mo></mover><mi>c</mi></msub></mrow><annotation encoding="application/x-tex">\overline{Q}_c</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.12747em;vertical-align:-0.24414em;"></span><span class="mord"><span class="mord overline"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.8833300000000001em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord mathnormal">Q</span></span></span><span style="top:-3.80333em;"><span class="pstrut" style="height:3em;"></span><span class="overline-line" style="border-bottom-width:0.04em;"></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.19444em;"><span></span></span></span></span></span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.057252em;"><span style="top:-2.4558600000000004em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">c</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.24414em;"><span></span></span></span></span></span></span></span></span></span></eq>
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/figure/2022-04-08-09-41-57.png" alt=""></p>
 <p>Similarly, we could obtain the question word clouds of each specific factors:</p>
+<p float="left">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor1.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor2.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor3.png" width="150">
@@ -2050,7 +2055,9 @@ We also add one extra column in <eq><span class="katex"><span class="katex-mathm
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor5.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor6.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-specific/factor7.png" width="150">
+</p>
 <p>and the question word clouds of each universal factors:</p>
+<p float="left">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor1.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor2.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor3.png" width="150">
@@ -2061,6 +2068,7 @@ We also add one extra column in <eq><span class="katex"><span class="katex-mathm
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor8.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor9.png" width="150">
 <img src="file:////Users/lamk5/Google Drive/GitProjects/mlt-external/multiblock/bimodel-10U7S-universal/factor10.png" width="150">
+</p>
 <p>As shown in the universal factors, since it is shared with all questionnaires, the number of dimension may not be optimal for <code>CBCL</code> and we can see that there are 4 factors which shares very similar pattern (Factor <code>1</code>, <code>4</code>, <code>5</code>, <code>7</code>).</p>
 </div>
         </div>
